# config_parser

./: .gitignore  Cargo.toml  README.md
src/: config.json  file_loader.rs  lib.rs  main.rs  output.rs  parser.rs  structure.json
