[package]
name = "config_parser"
version = "0.1.0"
authors = ["mturcan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
["config_parser"]

[dependencies]
clap = "^2"
serde_json = "1.0"
serde_yaml = "0.8.11"
onig = "^5"
indicatif = {version = "*", features = ["with_rayon"]}
log = "*"
serde = { version = "1.0", features = ["derive", "rc"] }
env_logger = "0.7.1"
rayon  = "1.3.0"