[package]
name = "config_parser"
version = "0.1.0"
authors = ["mturcan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
onig = "6.3.1"
fancy-regex = "*"
indicatif = {version = "*", features = ["with_rayon"]}
log = "*"
serde = { version = "1.0.136", features = ["derive", "rc"] }
env_logger = "0.9.0"
rayon  = "1.3.0"